--- a/less/main.less
+++ b/less/main.less
@@ -65,7 +65,12 @@ body {
 	h1 {
 		text-shadow: @shadow;
 		font-size: 4em;
-		margin: 150px 0 80px;
+		margin: 20px 0 60px;
+	}
+	#final-score {
+		text-shadow: @shadow;
+		font-size: 2em;
+		margin: 130px 0 20px;
 	}
 	button {
 		.largeButton(#bb0000);
